Fixed bugs, read description
- Fixed css not showing up
- renamed folder ‘content’ into ‘css’
- A lot of settings.py changes
- fixed static folder location ‘root/app/static/…’

--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -18,11 +18,10 @@ body {
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
-    color: #555;
-
+    color: #333;
+    height: 100%;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
-    
     margin-top: 70px;
 }
 
@@ -35,10 +34,6 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* Paragraph & Typographic */
-p {
-    line-height: 28px;
-    margin-bottom: 25px;
-}
 
 .centered {
     text-align: center;
@@ -86,39 +81,40 @@ a:after {
     padding: 0;
 }
 
+li .active {
+	height: 60px;
+}
+
+* {
+  border-radius: 0 !important;
+}
+
+.form-home {
+	height: 40px !important;
+}
+
+.button-search {
+	height: 40px !important;
+}
 
 .navbar {
 	font-weight: 800;
 	font-size: 14px;
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-bottom:0px;
+	margin-top: 0px;
+	border-bottom-width:0px;
 	background-color: #ffffff;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: #ffffff;
-	background-color: #3276b1;
+	background-color: #428bca;
 }
 
-.navbar-brand {
-	font-size: 60px;
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
-
-.btn-theme {
-	color: #ffffff;
-	background-color: #74cfae;
-	border-color: transparent;
-}
-
-.btn {
-	padding: 10px 30px;
-	margin-bottom: 0;
-	font-size: 18px;
-	width: 100%;
-	/*border: 5px solid transparent;*/
-	/*border-radius: 0px;*/
+.btn #login {
+	
 }
 
 .lead {
@@ -127,11 +123,12 @@ a:after {
 
 /* WRAP SECTIONS */
 
+
 /* hello */
 #hello {
 	width: 100%;
 	padding-top: 200px;
-	padding-bottom: 200px;
+	padding-bottom: 250px;
 }
 
 #left {
@@ -160,6 +157,7 @@ a:after {
 	font-weight: 400;
 }
 
+
 /* Green */
 #green {
 	background-color: #7496CF;
@@ -179,8 +177,9 @@ a:after {
 	font-size: 20px;
 }
 
-#searchbutton {
-	width:66%;
+
+#searchContainer {
+	padding-top:30px;
 }
 
 /* Skills */
@@ -220,42 +219,44 @@ a:after {
 	padding:30px;
 }
 
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
 /* Footer */
-#f {
-	margin-top: 40px;
-	padding-top: 20px;
-	background-color: #3276b1;
+.footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 40px;
+	vertical-align: center;
+	background-color: #3276b1
 }
 
-#f #poo p {
-	color: white;
-	text-align: left;
-	font-weight: 400;
+.footer-text {
+	height: 40px;
+	margin: 0px;
+	padding-top: 10px;
+	font-size: 12px;
+	color: #fff;
 }
 
-#f p {
-	color: white;
-	text-align: right;
-	font-weight: 400;
+.btn-default {
+	
 }
 
-span {
-	color: green;
+.pagination {
+	padding-bottom:30px;
 }
 
 
 /* Image Opacity */
 .grid img {
     opacity: .7;
-
 }
 .grid img:hover {
     opacity: 1;
-}
-
-#logo {
-	font-size: 20px;
-	text-align: left;
 }
 
 ::-webkit-input-placeholder {
